# dynamics-lib

./: .gitignore  README.md  pyproject.toml
examples/: Anesthetics_example.ipynb  check_when_convolution_can_be_numerical.ipynb  component_example.ipynb  convolution_example .ipynb  data_example.ipynb  example.ipynb  fit_example copy.ipynb  fit_example.ipynb  job_example.ipynb  simple_fit_example.ipynb
src/easydynamics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/easydynamics/Analysis/: Analysis.py  __init__.py  analysis.py
src/easydynamics/Experiment/: Data.py  Experiment.py  __init__.py  data.py  data_trick.py  experiment.py
src/easydynamics/Job/: Job.py  __init__.py
src/easydynamics/data/: data.py
src/easydynamics/resolution/: __init__.py  convolution.py
src/easydynamics/sample/: SampleModel.py  __init__.py  components.py  sample_model.py
src/easydynamics/utils/: __init__.py  utils.py
tests/unit_tests/analysis/: test_analysis.py
tests/unit_tests/resolution/: test_convolution.py
tests/unit_tests/sample/: test_components.py  test_sample_model.py
tests/unit_tests/utils/: test_utils.py
