[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "easydynamics"
version = "0.0.0"
description = "A QENS python package built on the EasyScience framework."
authors = [{ name = "Henrik Jacobsen", email = "henrik.jacobsen@ess.eu" }]
license = { file = "LICENSE" }
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
"numpy", 
"scipy",
"easyscience"]

[tool.setuptools]
package-dir = {"" = "src"}